@@ -362,3 +362,5 @@ Wand of resurrection shouldn't work on golem corpses.
 Lookmode should show whether a creature is panicked.
 "Entering level number 2" in Elpuri's cave should read "Entering Elpuri's cave level number 2"
 Coconuts falling from palms
+Changing keyboard layout (some people don't seem to like numpad)
+Reflecting items (mirror and shield of reflection)
